--- a/Sheol/01.md
+++ b/Sheol/01.md
@@ -1,4 +1,4 @@
-彼の名前はテオドールだが、仲間からは単にテオと呼ばれている。長身で、黒髪で、頻繁に「具合が悪いの？」と聞かれるほどに青白い顔をしている。
+彼の名前はテオドールだが、仲間からは単にテオと呼ばれている。長身で、黒髪で、頻繁に「具合が悪いのか？」と聞かれるほどに青白い顔をしている。
 それは彼が生まれついて持ったものなので、新世界へ移住したところで何ら変わりはしなかった。
 
 シェオルと呼ばれる新しい国家が誕生したのはテオが世界に誕生するずっと前だったから、彼はその新しい国に移住する提案を持ちかけられたときにも深く考えずに二つ返事で了承した。移住の提案をしてきたのが彼の親友であるエリオットだから、というのもその理由である。テオはそれまで何年も働いていた広告制作会社をあっさりと辞め、エリオットについていく決断をしたのだった。
@@ -51,3 +51,74 @@
 シェオルでは住民が自由に自分の体感時間を加速させたり、逆にゆっくりにしたりすることができるのでしょっちゅう時間の認識は住民同士の間でずれていた。それを統一するためにできたのが基準時間である。
 
 一方で、基準時間は宇宙開発のために地球外へ遠征している人間やロボットのためにあると主張する人もいるが、どちらが正しいのかを知る人はほとんどいない。社会にいる人間の大半は、基準時間の成り立ちなど気にしたことがないからである。
+
+テオは公園のベンチに寝そべって空が変わりゆくのを見ていた。青白い顔や、黒い髪は移住前と全くと言っていいほど変わっていない。そして、公園から見える空やマンションのそびえ立つスカイラインも現実世界とほぼ変わりがない。その建物の中が奇妙なこと以外は、拍子抜けするほどシェオルと物質世界に変わりはなかった。
+シェオルの住民は移住前にいた世界 ── 現実世界 ── のことを「物質世界」と呼んでいたから、いつの間にかテオもそう呼ぶようになった。
+シェオルには物質はないからである。あるのは電子の流れだけだ。だがそれを普段から自覚する人はまったくと言っていいほどいない。ただ呼び名がそうあるだけなのだ。
+
+テオが横になっているベンチには、春の木漏れ日が降り注いでいた。彼が移住したのは冬で、それから一週間も経っていないので春の日差しなのはおかしいのだが、移住してから知り合った住民曰く「ここはいつでも春なんだ」とのことだった。テオは寒いのが苦手だったので都合よく思っている。他の住民もきっとそうなのだろう。ここの気候に対して文句を言っている人をみたことはなかった。
+
+視界の端に、メッセージを受信したことを知らせるアイコンが点滅した。
+これはシェオルの住民向けの標準的なインターフェースだが、テオはまだ扱いになれていないのでいつもびくっとしていた。
+
+それは案の定、エリオットからのテキストメッセージで「どこにいるんだ？」とひと言だけが彼の文字で記されていた。
+
+「中央通りの北側にある公園だよ」
+テオは指を宙で動かす。木漏れ日を透かしてもはっきりと見える明るい青い線が、彼の指の動きに従って宙に文字を書いた。
+
+視界に浮かぶ実体のない手紙に文字をしたため、その横に同じように宙に浮いている送信ボタンに触れる。それはコミカルなアニメーションを通して彼のメッセージがエリオットに届いたことを示した。
+
+シェオル独自の通信方法に当初は面食らったものの、この一週間でだいぶテオは馴染んできたのを実感していた。なにより、もう広告制作会社の仕事に行く必要がないということが彼の精神的に大きな影響を与えていた。それなりに楽しい仕事ではあったものの、毎日同じことをしているとうんざりするものである。
+
+移住のコストは、移住前の物質的な全財産となる。
+もちろん、テオはそれをそっくりそのままシェオルに持ってきてもいる。お気に入りのコーヒーカップや古びた万年筆。ボーナスで購入したブーツとジャケット、その他諸々。そして、インターネットに接続できるあらゆる端末に保存した写真や動画、テキストにお気に入りの映画と本のリスト。
+彼の生活は何も変わっていない。それがもう物質として存在しないという事実以外は。そして、テオは実際のところそれを全く気にしていなかった。物質として持っていたものはそんなに多くないし、移住前より広い部屋に住むことができて、さらには隣人が毎晩通話相手に怒鳴り散らす声が壁越しに聞こえることもない。
+
+コンクリートがむき出しのシンプルな部屋は彼のお気に入りの一つだった。エリオットに言わせると味気ないらしいが、彼は以前からこんな部屋に住んでみたいと思っていたのだ。シェオルに移住してそれがかなったことで、彼は移住に際してほんの少し残っていた不安が消し飛んだのだった。
+
+「もうすぐパーティーの時間だぞ」
+
+すぐにエリオットから返信が来た。テオは左腕にはめた時計をちらりと見る。基準時間を示すその時計は、午後三時を指そうとしているところだった。
+
+服や靴など、身につけるものもほぼ移住前のものと同じだったテオだが、この時計だけは移住してから手に入れた。
+彼らの住んでいる都市、レナペ・シティのダウンタウンの端にある骨董品店で見つけたものだ。電子的な仮想都市に骨董品店というのが似合わなすぎて、一度通り過ぎてから気になって店に戻ったのだ。
+レコードや筆記具、ガラス細工から一見何に使うのかわからない道具まで、その店には溢れていた。
+
+店主はミスター・リチャードという若い男性で、病気がきっかけで移住してきたのだと言った。
+ミスター・リチャードはテオの移住した理由を聞くとため息をついて「もったいないことを……」とつぶやいた。テオがその意味を訪ねようとしたが、彼は「なんでもないんだ」と取り繕った。
+
+「せっかく移住したのに仕事をするんですか？」
+テオはそう尋ねた。テオからしてみれば、移住して働く必要がないのに仕事をする、というのが不思議に思えたのだった。
+
+「この店は趣味でやってるんだ」
+ミスター・リチャードはそう言った。聞けば彼は見かけよりずっと年上だった。移住の際に若い頃の写真をもとにアバターを作ったのだという。
+
+「こっちのほうが見栄えがいいからな」
+店主はそう言って静かに笑った。
+
+その店で買った時計は、時間を示す以外に何の機能もないという驚きの代物だった。そういう物が存在するのを知識としては知っていたものの、実物を（実体がないとはいえ）目にするのが初めてだったテオはその場で購入した。
+
+購入する、と言ってもシェオルでは通貨は無いに等しい。
+必要なのは個人の所有物を記憶する領域の容量のみで、移住直後に設定されたその範囲内で手に入れることができる。
+移民は大抵、物を持ちすぎているので移住に際して持ち物を減らすことがほとんどだった。
+テオも多くの移民のように、家財道具を減らしてきたので記憶領域には余裕がある。
+
+ほとんどタダで手に入れたその時計を、テオは気に入っていた。時間を知る以外になんら役に立たない道具を持つというところがすこし贅沢だと思えて、なんだか愛着が湧いたからだ。
+
+「ちょっと遅れるけど、ちゃんと行くよ」
+
+エリオットにメッセージを返すと、テオはベンチから立ち上がった。移住してからエリオットは毎日と言っていいほどパーティーを開催していた。もしくは近隣住民のパーティーに参加していた。
+テオもエリオットに誘われてなんとなく毎日参加している。楽しいことは嫌いじゃない。それに知り合いも増える。昨日は……。
+
+ふと、昨日の出来事を振り返った。
+エリオットの自宅で飲んだのは覚えている。一面が窓のリビングは吹き抜けになっていて、そこからベランダに出るとロサンゼルス風の街並みを一望することができる豪華な邸宅。エリオットは死亡保険で移住の際に大量の記憶領域を得た。それを自宅や、移住前には見かけることすらまれだった完全手動運転の車やインテリアの数々に使ったところで文句を言う人はいないだろう。
+
+そう、エリオットの新しい家だ。
+テオは記憶を手繰った。
+
+彼の家には近隣の住民である十数人が集まっていた。
+一人ひとり紹介されたが、正直テオは全員のことをおぼろげにしか覚えていなかった。元弁護士、元医者、元保険会社のセールスから元学生まで様々だ。年齢も出身地も様々だったが、ミスター・リチャードのことを考えると外見から年齢を推測するのは難しいようにも思えた。
+
+そうだ、昨日はひどく酔ったことは覚えている。酔っていたから記憶が曖昧なのかもしれない。
+テオはそう自分に言い聞かせた。時計を手に入れた一昨日のことは覚えているが、昨日エリオットのパーティーに行ったときの記憶がひどく曖昧だった。パーティーに行ったのは確実だ。
+自分自身が「今日は 5 時くらいに行くから」とエリオット宛に送ったテキストメッセージが残っている。
