--- a/Journey/01.md
+++ b/Journey/01.md
@@ -1,20 +1,32 @@
 DAY 11
 
-あたり一面、無慈悲な太陽に照らされて真っ白だった。厚い氷に覆われた世界には大地の面影を残した凹凸があって、それに沿うように薄い線が刻まれていた。線の上をゆっくりと点が動いている。
-
-線は道だった。
-分厚い氷の層の上に何年にも渡って刻まれた旅人たちの足跡。
+あたり一面、無慈悲な太陽に照らされて真っ白だった。厚い氷に覆われた世界には大地の面影を残した凹凸があって、それに沿うようにゆっくりと点が動いている。
 
 点は旅人だった。
 旅人はポラリスを運転している。軟化ガラスで覆われた荷台の一番上に、倒れないように固定された植木鉢がある。旅の相棒である希少な植物。
-ポラリスの後部キャタピラが氷のわずかな凹凸を踏むと、植木鉢の葉はそれに従って揺れた。真昼の太陽を浴びて青々とした葉を広げて呼吸している。
+ポラリスの後部の履帯が氷の凹凸を踏むと、植木鉢の葉はそれに従って揺れた。真昼の太陽を浴びて青々とした葉を広げている。
+
+反射光を抑えるためのゴーグルを掛けていても、日光を浴びている氷河の凹凸を見分けるのは困難だった。旅人の頭にあるのは、進路を維持することと、荷物を積んだポラリスが氷の塊に乗り上げたりくぼみにはまって転倒しないようにすることだけだ。
+
+しばらく進むと、あたりは平坦になってきた。難所は越えたらしい。酸素発生装置を積んだポラリスが故障したら、と考えるとぞっとする。
+
+旅人は息をついた。危険な旅ではあるが、元の街に戻るという選択肢はとうの昔に失われている。故郷に戻るのはずっと後になるだろう。
+
+平地をしばらく進んでいるうちに、故障の恐怖は薄れてきた。
+今夜は野宿かな、とのんきに考えながら南へと進路を維持し続ける。氷の上で寝ることは大して苦ではない。ポラリスのエンジンと電熱スーツのおかげで氷点下 120 度近くなる夜でも氷漬けにならずに済む。バッテリーが続く限りは。
+ポラリスに積んでいる小型のバッテリーは、昨日立ち寄ったステーションで充電させてもらったため、あと五日は持つはずだった。そして、次のステーションまであと三日の予定だ。
+生命が存在することを拒む世界を旅していても、旅人はそれほど恐怖を感じていなかった。むしろ、今までの人生の中で一番いきいきとしていたかもしれない。
+
+故郷を出たのは偶然が重なったからだった。
+この目で他の街を見てみたいと思ったのは子どもの頃。初めて故郷の街に旅人が交易品を持ってやってきたときのこと。彼の話す別の街や、氷に覆われた世界を歩く危険な冒険に心を踊らせた同世代はたくさんいた。
+その中でも、自分が旅に出ることに成功したのは運が良かったからだと思っている。
 
 旅人は昨晩のことを考えていた。
 変わった人だったな、と思う。あのミレイユと名乗った管理人のこと。
-ミレイユは「自分は管理人ではない」と言ったが、旅人の常識ではステーションに住んでいるのは管理人なのだ。
 
-微風で、雲はない。
-旅人の視界には白と青のコントラストが延々と続いている。聞こえるのはポラリスのモーターが駆動するかすかな音と、氷を踏む音しかない。旅に出てから毎日見ているいつもの光景。美しいが、生命の存在を許さない過酷な環境だ。
+微風で、視界はどこまでもよく見えるようだった。地平線を見渡しても、次のステーションは見えない。まだ地氷線に隠れている。
+
+旅人の視界には白と青のコントラストが延々と続いている。聞こえるのはポラリスのモーターが駆動する音と、氷を踏む音しかない。旅に出てから毎日見ているいつもの光景。美しいが、生命の存在を許さない過酷な環境だ。
 
 ふと、グローブの手首付近についているランプが点滅しているのを見て、旅人はポラリスの移動を止めた。エンジンはつけたままにしておく。エンジンを止めるとポラリスも積荷もたちまち凍りついてしまうのだ。
 
@@ -23,10 +35,10 @@ DAY 11
 
 ピッケルで砕いた氷を酸素発生装置のタンクに入れて少し待つと、警告ランプが沈黙した。これで一日は酸欠になる心配はない。
 
-旅人は自分の影を追うように再びポラリスを走らせた。ザリザリとキャタピラが氷を噛む音がする。視界はゴーグルをしてもまばゆいほどだ。
+旅人は自分の影を追うように再びポラリスを走らせた。ザリザリと履帯が氷を噛む音がする。
 
 旅人は再び、先日のステーションでの出来事に思いを馳せた。
-以前出会った旅人からは一度もそんな話を聞いたことがなかった。ステーションはどこも同じように街があって、人が住んでいるものだと思っていた。まさか、広大なステーションを管理するのが一人しかいないなんて思っていなかったのだ。
+以前出会った旅人からは一度もそんな話を聞いたことがなかった。ステーションはどこも同じように街があって、人が住んでいるものだと思っていた。まさか、広大なステーションを管理するのが一人しかいないなんて考えたことすらなかった。
 
 DAY9
 
@@ -41,63 +53,110 @@ DAY9
 
 旅人は釈然としないながらもうなずいた。本人が言うならそうなのだろう。しかし、旅人の常識ではステーションに住んでいる人間は管理人なのだ。彼女の父がそうであるように。
 
-「ミレイユと申します。初めて見る旅人さんですね」
-「わたしはルイザです！はい、はじめての旅なんです」
-「そうでしたか。ここはマナウスの街に近いですからね。そちらから？」
+「ミレイユと申します」
+「あっ、わたしはルイザです。よろしくお願いします！」
+「ここはマナウスの街に近いですからね。そちらから？」
 
 ルイザはうなずいた。マナウスは彼女が生まれ育った街だ。
 
 「それは結構なことです。世界を見るのは良いことですね」
 「そう思います」
+「星を見るのもまた、良いことですよ」
+「それ、ちょっとわかります」
+「日が沈んだら星空を眺めるのはいかがですか？ああ、休憩室まで案内しましょう」
 
-ルイザは食い気味にそういった。彼女は子どものころから、街に時々やってくる旅人の交易品と、旅の話に夢中になっていた。
+ミレイユと名乗った人物は、まるでルイザが今日訪れることを知っていたかのような態度でそう言った。
 
-ミレイユの案内に従って、ステーションの二重になっているエントランスの内側にポラリスを停めた。ステーションの入り口は外の冷気を入れないために、そして中の酸素を留めるために二重になっている。故郷の街と同じ構造だった。
+ミレイユの案内で、ステーションのエントランスにポラリスを停めた。ステーションの入り口は外の冷気を入れないために、そして中の酸素を留めるために二重になっている。故郷の街と全く同じ構造だった。
 
-エントランスは明るく、広々としていた。軟化ガラスに覆われた天井から、日の光が入ってきているのだ。夜は星が見えるのだろう。
+エントランスは明るく、外よりだいぶ暖かい。軟化ガラスに覆われた天窓から見える空は茜色と水色のグラデーションを作っていた。もうすぐ日没だ。
 
-ポラリスに酸素発生装置はポラリスに付随しているため、旅人は酸素マスクを外した。エントランスの酸素は薄いが、十分に呼吸できる濃度ではある。
+ポラリスのエンジンを切って、酸素マスクとゴーグルを外す。久しぶりに顔を晒したルイザは、大きく深呼吸した。
 
-「植物を持っていってもいいかな？」
+「ああ！やっぱり旅って大変ね！お風呂に入りたい」
+「休憩室にあるので自由に使ってください。案内します」
+「ありがとう」
+
+ルイザは電熱スーツを脱ぎ捨てると、ジャケットを羽織った。身軽になるのは街を出る直前、約十日ぶりだ。
+ポラリスから必要な荷物を下ろしながらミレイユに尋ねる。
+
+「植物を持っていってもいい？」
 「どうぞ。中のほうが温かいですから」
 
-ミレイユはそう言って、ポラリスの荷台から植木鉢を下ろすのを手伝ってくれた。植物は旅人にとって最も高価な交易品の一つになる。ルイザが故郷を出るとき、母親が持たせてくれたのがこの”生命の樹”の植木鉢だった。”生命の樹”は光合成による酸素の還元率が高い植物の一つなので、旅人に限らずルイザの故郷の人にとって重宝されていた。
+ミレイユはそう言って、ポラリスの荷台から植木鉢を下ろすのを手伝ってくれた。植物は旅人にとって最も高価な交易品の一つになる。ルイザが故郷を出るとき、母親が持たせてくれたのがこの”生命の樹”の植木鉢だった。”生命の樹”は光合成による酸素の還元率が高い植物の一つなので、旅人に限らずルイザの故郷の人にとって重宝されていた。彼女にとって旅の相棒でもある。
 
-必要な荷物をおろして、ポラリスのエンジンを切る。低く振動するような音が止むとあたりは静かになった。
-ルイザは旅の手順を、以前街に来た旅人から聞いていた。氷の平原の所々にこの街にあるようなステーションがあって、そこで補給ができると。運が良ければそこで他の旅人と出会うかもしれない。少なくとも、旅は過酷な外の環境に適応する術さえ持っていれば、そこまで困難なものではなかった。
+ルイザは旅の話を、以前街に来た旅人から聞いていた。
+最後にマナウスの街に旅人が来たのは十年以上前のことだ。ここ何年も、旅人は訪れていなかった。そもそも旅をする人が減ったという説と、動かすことができるポラリスや携帯用の酸素発生装置がもう残っていないという説がそこかしこで聞こえていた。酸素発生装置は高度な技術が使われていて、作れるエンジニアは限られていた。マナリスの街でも一人の老人しか作っていなかった。彼女の持っている酸素発生装置はその老人から、羊一頭とうさぎ一匹で交換したものだ。
+
+交易が無いと街は孤立していく。旅人は交易品とともに情報もやり取りする役目を持っていた。その旅人がもう何年も来ていないことがルイザにとっては不満であり、怖くもあった。
+
+十数年前の旅人の情報では、各地にこの街のようなステーションがあって、そこで補給ができるということだった。マナリスの街からまっすぐ南に五日ほど進むと、最初のステーションがあるということを彼女はその時知ったのだ。
+ステーションには管理人がいて、運が良ければそこで他の旅人と出会うかもしれないとも聞いた。少なくとも、旅は過酷な外の環境に適応する術さえ持っていればそこまで困難なものではなかった。
 それでも、旅に必要な物資を揃えることができる人間は限られている。
-ルイザは父がステーションの管理人だったこともあり、幼い頃からものに不自由したことはなかった。家はいつも緑と動物で溢れていた。
+ルイザは父がステーションの管理人だったこともあり、幼い頃から物に不自由したことはなかった。家はいつも緑と動物で溢れていた。
 植物と動物は何よりも貴重なものだ。家から一歩出れば、植物も動物も見かけることは稀だったから、ルイザは早くに自宅が裕福であることを知っていた。
 
 旅人は街と街をつないで交易をする。一つの街でありふれているものでも、他の街で売れば高値がつくことがある。
-それになにより、街から出ることができる。
+それに情報だ。他の街がどんな生活をしているのか。氷原はどこまで迫っているのか。
+北へ行けば、まだ氷に覆われていない土地があると聞く。それも何年も前の話だ。それでも彼女が南への旅路を選んだのは、氷に覆われていない土地は治安が悪いともっぱらの噂だったからである。
 
-ほとんどの人が街から出ることなく一生を終える世界で、街の外に出るというのは人生をかけた冒険だった。街の外に出るのは、旅人と鉱夫、それとステーションの修理をするエンジニアくらいのものだった。
+ほとんどの人は街から出ることなく一生を終える。危険な外に出るのは旅人と都市鉱山の鉱夫、それとステーションの修理をするエンジニアくらいのものだった。
 
-酸素発生装置はそもそも高価で、個人で持っている者は限られている。小型化したものは鉱夫たちが使っているし、ポラリスへ搭載するタイプのものは旅人用だ。一般人が手に入れることはまずない。
-そして、酸素発生装置なしでステーションの外に出るのは文字通り自殺行為だった。どんな動物でも植物でも、外の酸素濃度で長時間活動できるものはいない。たちまち窒息してしまう。
+携帯用の酸素発生装置はそもそも高価で、個人で持っている者は限られている。小型化したものは鉱夫たちが使っているし、ポラリスへ搭載するタイプのものは旅人用だ。一般人が手に入れることはまずない。
+そして、ステーションの外に出るのは自殺行為だった。どんな動物でも植物でも、外の酸素濃度で長時間活動できるものはいない。たちまち窒息してしまう。
 
-例外は人間だけだ。人間は電気を使って水を水素と酸素に分解する方法を知っていた。知恵を使って、大昔に地球が凍りついたとき、街を大きなドームで覆って酸素で満たす方法を考えだした。生き残ったのはドームの中に運良く入れた人間と、家畜たち。それから寒い環境でも育つ、いくつかの植物。
+人間は電気を使って水を水素と酸素に分解する方法を知っていた。知恵を使って、大昔に地球が凍りついたとき、街を大きなドームで覆って酸素で満たす方法を考えだした。生き残ったのはドームの中に運良く入れた人間と、家畜たち。それから比較的寒い環境でも育つ、いくつかの植物。
 
 ミレイユがステーションの入り口のパネルを操作する。シュッと空気が漏れる音がして、ドアが開いた。
-ステーションの外に続く反対側のドアは固く閉じられている。中の空気がもれないように、入り口は二重構造になっている。
+ステーションの外に続く反対側のドアは固く閉じられている。
 
-「ようこそ」
-ミレイユは振り返って言った。ルイザはそれを優雅な仕草だと思った。
+「こちらへ」
+ミレイユはルイザのバッグを持って歩き出した。ルイザは植木鉢を抱えて、慌ててミレイユの後をついていく。
 
-「休憩室に案内しますね」
-ミレイユはルイザのバッグを持って先にたってあるき出した。ルイザは植木鉢を抱えて、慌ててミレイユの後をついていく。
+ステーションの中は空っぽだった。円形になっている廊下は金属で覆われていて、これといった装飾も無ければ植物がおいてあることもない。故郷のステーションは植物でいっぱいだったので、それを期待していたルイザは少しがっかりした。空調の音が静かに響いている。
+他にも人間がいるのかと思っていたが、休憩室のドアの前にたどりつくまで一人ともすれ違わなかった。
 
-ステーションの中は空っぽだった。無機質な空間に空調の音が静かに響いている。
-
-「あの……ここには他に誰もいないんですか？」
-「はい。わたし一人です」
-「いつからひとりで？」
-「ここ二年ほど」
+「あの、ここには他に誰かいますか？」
+「いいえ、わたしひとりです」
+「いつから？」
+「ここ二十五年ほど」
+「他に旅人が来ることはありませんでしたか？」
+「そうですね…十二年と三ヶ月前にひとり。たしか名前は ── アンソニー・ベックスさん」
+「彼が最後の旅人？」
+「そうです。あなたが来るまでは」
 
 ミレイユは振り返らずに歩きながら言った。
-ルイザの頭の中には無数の疑問が浮かんでは消えていった。しかし、その疑問を口にする前に、先頭を歩いていたミレイユが振り返った。
+ルイザの頭の中には無数の疑問が浮かんでは消えていった。しかし、その疑問を口にする前に、ミレイユが振り返った。
 
 「こちらが休憩室です。部屋の中の物は自由に使ってください」
 
 静かにスライドして開いたドアの向こうは思った以上に広かった。ここも換気が行き届いているのか、空調の音がかすかに聞こえる。
+
+広々とした空間は廊下より一層暖かかった。窓はない。どうせ氷以外に見るものもないのだが。
+
+休憩室の中には小さな小部屋があって、ミレイユはその一つにルイザを案内した。その空間は故郷の自室を思わせるもので、十分な広さのベッドとテーブルがおいてあった。
+
+「ありがとう。久しぶりにゆっくり休めそう」
+「後で食事をお届けします。それから補給が必要な物があればおっしゃってください。わたしは向かいの部屋にいますので」
+
+ミレイユはそういうと部屋を出ていった。
+
+シャワーを済ませて部屋に戻ると、食事がおいてあった。ミレイユは食事をすませて休憩室を出た。
+一通りステーションの中を散策する。最初の印象と違わず、他の生き物の気配は一つもなかった。無機質な廊下に空調の音が反響しているだけだ。建物は六角状になっていて、北側にエントランス、南側に休憩室がある構造になっている。彼女の故郷のにあったステーションと同じ構造だとすれば、中央にエネルギーを受信するための巨大な受光機があるはずだった。彼女はその部屋に入ったことがあった。中はケーブルが縦横無尽に這っていて、街中に電力を届けるために変圧して送電する装置があった。それを理解しようと勉強していたこともあった。
+
+中央の部屋への入り口は休憩室のすぐ前にあった。ステーションの廊下を一周して戻ってきたルイザはドアの前に立った。
+休憩室のドアは前に立つと自動で開くものだった。最初は面食らったものの、すぐにそういうものだと思うことにした。彼女の故郷には自動で開くドアはなかった。
+しかし中央の部屋のドアの前に立っても、ドアは反応しなかった。仕方なくノックする。
+
+「ミレイユ、いる？」
+
+すぐさまドアは音もなくスライドした。
+「ルイザさん。お食事は口に合いましたか？」
+「はい、おいしかったです」
+「それはよかった。どうぞ、お入りください」
+「ありがとう。人に会うのは久しぶりだから話し相手が欲しくて ──」
+
+中央の部屋に入ったルイザは言葉を失った。
+
+巨大な部屋の中心に、受光機と変圧器があるのは同じだった。しかし、部屋の見た目は故郷のもとのは全く違っていた。
+まず、部屋を這い回っているケーブル類がない。人が他にいないから当然かもしれない。
