--- a/Journey/01.md
+++ b/Journey/01.md
@@ -1,162 +1,149 @@
 DAY 11
 
-あたり一面、無慈悲な太陽に照らされて真っ白だった。厚い氷に覆われた世界には大地の面影を残した凹凸があって、それに沿うようにゆっくりと点が動いている。
+あたりは一面、真昼の太陽に照らされて真っ白だった。反射光を抑えるためのゴーグルをしていても、氷河の凹凸を見分けるのは困難だ。
 
-点は旅人だった。
-旅人はポラリスを運転している。軟化ガラスで覆われた荷台の一番上に、倒れないように固定された植木鉢がある。旅の相棒である希少な植物。
-ポラリスの後部の履帯が氷の凹凸を踏むと、植木鉢の葉はそれに従って揺れた。真昼の太陽を浴びて青々とした葉を広げている。
+旅人は、突然のくぼみにはまって転倒しないように慎重にポラリスを操縦している。軟化ガラスに覆われた荷台の後ろ側には、丁寧にロープで固定された植木鉢がある。故郷を出るときに餞別にもらったものの一つだ。生命の樹と呼ばれるその植物は、光合成によって放出される酸素の量が他の植物よりも多いことで重宝されていた。ポラリスの後部の履帯が氷を踏む度に、鮮やかに色づいた葉をのんきに揺らしている。
 
-反射光を抑えるためのゴーグルを掛けていても、日光を浴びている氷河の凹凸を見分けるのは困難だった。旅人の頭にあるのは、進路を維持することと、荷物を積んだポラリスが氷の塊に乗り上げたりくぼみにはまって転倒しないようにすることだけだ。
+無謀にも故郷を飛び出したものの、十日が過ぎても目的地が見つからずに旅人は焦っていた。そもそも、隣の街まで南に六日、とは十年以上も前に別の旅人から聞いた情報しかない。本当にそこに街があったのか。今でもあるのか。それを知るものは故郷には一人もいなかった。街の誰も、もう何年も一キロメートル以上離れたことがなかったからである。
+旅人はそれが不満であり、不安でもあった。街と外をつなぐ唯一のエアロックを見る度に、世界からこの街が取り残されているような気分になっていたからである。
 
-しばらく進むと、あたりは平坦になってきた。難所は越えたらしい。酸素発生装置を積んだポラリスが故障したら、と考えるとぞっとする。
+彼女が子供の頃、街には年に一人ほど旅人が訪れていた。
+旅人は他の街からやってきて、珍しい植物や工芸品、ときには小動物なども運んで来ていた。それに加えて外の情報も。とは言っても、街の外には特に見るべきものはない。氷点下百度前後の街の外は生命の存在を許さない過酷な環境だ。そんな中を移動するのは、入念な準備と適応力が必要になる。そうして運と冒険心がある者が街を出る。旅に出る理由はいろいろだ。新たな都市鉱山を見つけて一儲けしたいとか ── もっとも、都市鉱山を見つけてその付近に新しい街を作るのは恐ろしく手間がかかる ──、氷に覆われていない大地を見たいとか、新種の植物を見つけたいとか、そんなところだ。そして、街に居場所がない者も旅に出ることがある。
 
-旅人は息をついた。危険な旅ではあるが、元の街に戻るという選択肢はとうの昔に失われている。故郷に戻るのはずっと後になるだろう。
+度に出る動気になる夢物語をひとつ。
 
-平地をしばらく進んでいるうちに、故障の恐怖は薄れてきた。
-今夜は野宿かな、とのんきに考えながら南へと進路を維持し続ける。氷の上で寝ることは大して苦ではない。ポラリスのエンジンと電熱スーツのおかげで氷点下 120 度近くなる夜でも氷漬けにならずに済む。バッテリーが続く限りは。
-ポラリスに積んでいる小型のバッテリーは、昨日立ち寄ったステーションで充電させてもらったため、あと五日は持つはずだった。そして、次のステーションまであと三日の予定だ。
-生命が存在することを拒む世界を旅していても、旅人はそれほど恐怖を感じていなかった。むしろ、今までの人生の中で一番いきいきとしていたかもしれない。
+しかし故郷を出て六日を過ぎても、街にあるはずの巨大なアンテナの先端すら見当たらなかった。あたりは一面氷の世界だ。微風で、どこまでも続いているように思える青空が広がっている。青空の氷の鮮やかなコントラスト。代わり映えのしない、旅に出てから見慣れた風景。
 
-故郷を出たのは偶然が重なったからだった。
-この目で他の街を見てみたいと思ったのは子どもの頃。初めて故郷の街に旅人が交易品を持ってやってきたときのこと。彼の話す別の街や、氷に覆われた世界を歩く危険な冒険に心を踊らせた同世代はたくさんいた。
-その中でも、自分が旅に出ることに成功したのは運が良かったからだと思っている。
+太陽が旅人自身の影を前方に映し出し、進むべき方向を明確にしている。南に六日。その情報だけで街を出た。もう少し、詳しい場所を調べてから行くべきだったかもしれない。もしかしたらどこかに目印があったのかもしれない、などと旅人は後悔し始めていた。ポラリスのメインバッテリーはもう半分を切っている。今更街に戻る事はできず、予備バッテリーでは電熱スーツの充電くらいにしか使えないので次の街が見つからなければまず酸欠で死ぬことになる。
+それに ── 旅に出る直前に出会った人々の顔が脳裏によぎる ──、そもそも外の世界に詳しい人など故郷には一人もいなかった。酸素発生装置を羊一頭とうさぎ一羽で譲ってくれた老人すら、外には仕事でしか出たことがないという。
 
-旅人は昨晩のことを考えていた。
-変わった人だったな、と思う。あのミレイユと名乗った管理人のこと。
+街で外の世界に一番くわしいのは鉱夫たちだった。彼らは毎日外に出る。街の出口から五百メートルほど離れたところに都市鉱山はあった。街からだと氷の柱のようにしか見えないが、近づけばそれが古代の建築物であることはひと目で分かる。世界が氷河に覆われる前、人はその都市に住んでいたのだという。
+今では都市の廃墟は宝の山だ。金属資源はほとんど都市鉱山から採取している。古代都市はどこから金属を採掘していたのか、旅人は知らない。
 
-微風で、視界はどこまでもよく見えるようだった。地平線を見渡しても、次のステーションは見えない。まだ地氷線に隠れている。
+都市鉱山で採掘作業をしている鉱夫たちが一番、外の世界に詳しかった。その次がエンジニアだ。エンジニアは街の修理をする人たちで、定期的に外に出ては街の外壁や空調設備に故障がないか点検して回っている。
 
-旅人の視界には白と青のコントラストが延々と続いている。聞こえるのはポラリスのモーターが駆動する音と、氷を踏む音しかない。旅に出てから毎日見ているいつもの光景。美しいが、生命の存在を許さない過酷な環境だ。
+そういう、優秀な職業についている人々ですら、街の外から数百メートル以上離れたがらなかった。外は死の世界だ。生き物はおらず、空気は薄く乾燥している。
 
-ふと、グローブの手首付近についているランプが点滅しているのを見て、旅人はポラリスの移動を止めた。エンジンはつけたままにしておく。エンジンを止めるとポラリスも積荷もたちまち凍りついてしまうのだ。
+旅人には進む選択肢しかなかった。ただ一途に南を目指す。その先に何も無ければ死ぬだけで、街があればもう少し生きることができる。それだけだ。
 
-ランプは酸素発生装置内の水の残りが少ないことを表すものだったので、旅人は座席の横にくくりつけてあったピッケルを片手にポラリスから降りた。
-酸素発生装置の原動力は水だけだ。水はあたりに潤沢にある。それと電気だが、バッテリーは昨日充電したばかりなので十分に余裕はある。
+右の手首にくくりつけているセンサが反応して、ランプを点滅させていることに気づくと、旅人はポラリスを停めた。エンジンは点けたままにしておく。エンジンを止めると、たちまち外気で凍りついてしまうのだ。
 
-ピッケルで砕いた氷を酸素発生装置のタンクに入れて少し待つと、警告ランプが沈黙した。これで一日は酸欠になる心配はない。
+ランプはポラリスに搭載している酸素発生装置の燃料である水が残り少ないことを示すものだったので、ピッケルを片手に運転席から降りた。水はあたりに潤沢にある。
 
-旅人は自分の影を追うように再びポラリスを走らせた。ザリザリと履帯が氷を噛む音がする。
+砕いた氷をタンクに放り込んで少し待つと、酸素発生装置はおとなしくなった。これで一日は酸欠にならずにすむ。
+どのみち、街が見つからなければバッテリー切れで移動することもできず呼吸もできなくなるのだが。旅人はそのことについては考えないようにして、再びポラリスを走らせた。ただひたすら南へ。
 
-旅人は再び、先日のステーションでの出来事に思いを馳せた。
-以前出会った旅人からは一度もそんな話を聞いたことがなかった。ステーションはどこも同じように街があって、人が住んでいるものだと思っていた。まさか、広大なステーションを管理するのが一人しかいないなんて考えたことすらなかった。
+その日、夕暮れ近くまで走ってようやく巨大なアンテナの先端が地氷線の先に見えたとき、彼女の心は安堵と不安でざわざわしていた。ようやく見つけた街は、伝え聞いていたものだろうか。あの街では旅人を迎え入れてくれるだろうか。旅人の持ってきた交易品といえば、小さな植木鉢一つしかない。戻る道はない。逸る気持ちを抑えながらアンテナに向かってポラリスを進めた。
 
-DAY9
+全体像が見えたとき、彼女は再び不安に襲われた。それは街と呼ぶにはあまりにも小さすぎた。
+大きな、角張ったドーム型天井の建物が一棟しかない。もっとも、旅人の街の基準は生まれ育った場所しかなかったので、彼女にはそれが一般的な居住地として適切なのかわからない。しかし、そこに住む人は故郷よりずっと少ないだろうことは容易に想像がついた。故郷の街を出るとき ── それが街全体を初めて見た瞬間だった ── に見た全体像は、中央にある巨大なアンテナを備えた建物を中心にして、そこから継ぎたされたなんともちぐはぐな外観だった。内側だけなら少なくとも立派なものなのだが。誰も外からの見た目なんてものを樹にする人間はいなかった。
+
+ポラリスの速度を更に落としながら建物に近づく。人が出てくる気配は無い。住民はこちらに気づいているだろうか？中に入れてもらえるだろうか。せめてポラリスのバッテリーだけでも充電させてもらえるだろうか。
+
+街の入口にあたるエアロックは、歓迎するかのように旅人の方を向いていた。故郷のものに似ているが、細部が違う。それに、随分新しいように見えた。
+
+ポラリスから降りて、入り口の横に備え付けられたボタンを押す。音もなくドアがスライドして開いた。
+相変わらず住民の姿も気配もない。
+時間に比例して増していく不安を押し殺し、ポラリスごとエアロックの中に入る。エアロックの中は外観から想像するよりも広かった。入り口が自動で閉まり、シューッとどこからか酸素が入ってくる音がする。旅人はじっと待った。
+
+しばらくすると、突然内側のドアがまたもや音もなくスライドした。中から一人の人間が出てきたので旅人は驚いた。今まで全く人の気配がなかったのだ。
 
 「こんばんは」
+住民があまりに普通に挨拶するので、旅人は一瞬面食らった。
 
-管理人はそういった。
-変わった雰囲気の人だった。旅人から目をそらさずにお辞儀する様はなんだか狩人を思わせる目つきだったが、物腰は柔らかで、そのちぐはぐさがなぜだか印象に残った。
+「あ、あの……」
+「良い天気ですね」
+「ええ。そうですね……」
 
-「あ、こんばんは。ここの管理人さんですか？」
-「わたしは管理人ではありません。ただの観察者の一人」
-「そうなんですか……」
+旅人はその人を見た。年の頃は自分より少し上といったところだろうか。肩のあたりで揃えたブラウンの髪は波打っていて、エアロックの天窓から差し込む夕日に照らされてつやつやと輝いていた。飾り気のない真っ白な、風変わりな服をまとっている。
 
-旅人は釈然としないながらもうなずいた。本人が言うならそうなのだろう。しかし、旅人の常識ではステーションに住んでいる人間は管理人なのだ。彼女の父がそうであるように。
+「ミレイユと申します。旅人さんですね」
+「あっ、どうも！」
 
-「ミレイユと申します」
-「あっ、わたしはルイザです。よろしくお願いします！」
-「ここはマナウスの街に近いですからね。そちらから？」
+旅人は慌ててマスクとゴーグルと帽子を外した。旅人が帽子に押し込んでいた長い黒髪が開放されて背に流れた。
 
-ルイザはうなずいた。マナウスは彼女が生まれ育った街だ。
+「どうも、ルイザです。マナウスの街から来ました」
+「そうでしょうとも」
 
-「それは結構なことです。世界を見るのは良いことですね」
-「そう思います」
-「星を見るのもまた、良いことですよ」
-「それ、ちょっとわかります」
-「日が沈んだら星空を眺めるのはいかがですか？ああ、休憩室まで案内しましょう」
+ミレイユと名乗った住民はルイザが来ることを知っていたかのように言った。
 
-ミレイユと名乗った人物は、まるでルイザが今日訪れることを知っていたかのような態度でそう言った。
+「お疲れでしょう。どうぞ休んでいってください」
+「あ、ありがとう……」
 
-ミレイユの案内で、ステーションのエントランスにポラリスを停めた。ステーションの入り口は外の冷気を入れないために、そして中の酸素を留めるために二重になっている。故郷の街と全く同じ構造だった。
+ルイザは困惑していた。この街は何というのか。住民はどれほどいるのか。彼女の頭の中では疑問が浮かんでは消えていった。そして十日ぶりに人に会えて安堵した途端、急に疲労を感じた。
 
-エントランスは明るく、外よりだいぶ暖かい。軟化ガラスに覆われた天窓から見える空は茜色と水色のグラデーションを作っていた。もうすぐ日没だ。
+「荷物を下ろすのを手伝いましょうか」
+「あ、大丈夫です。自分でやります！」
 
-ポラリスのエンジンを切って、酸素マスクとゴーグルを外す。久しぶりに顔を晒したルイザは、大きく深呼吸した。
+ルイザは慌てて電熱スーツを脱ぎにかかった。エアロック内の温度が上がってきて暑さを感じた。ポラリスのエンジンを切る。低く響いていたモーター音が消えて静寂が訪れると、急に気まずさを感じた。
 
-「ああ！やっぱり旅って大変ね！お風呂に入りたい」
-「休憩室にあるので自由に使ってください。案内します」
-「ありがとう」
+「夜に間に合ってよかった」
+ミレイユは静かに言った。夜になると外の温度は氷点下百二十度にまでなる。電熱スーツを着込んでいても厳しい寒さだ。ミレイユのいうことは最もだった。
 
-ルイザは電熱スーツを脱ぎ捨てると、ジャケットを羽織った。身軽になるのは街を出る直前、約十日ぶりだ。
-ポラリスから必要な荷物を下ろしながらミレイユに尋ねる。
+「本当に。思ったより時間がかかってびっくりしちゃった」
+「マナリスの街からは何日ほど？」
+「うーん、今日で十日目かな」「それは大変だったでしょう」「ええ、お風呂に入りたい」「休憩室に用意してあります」
+「ありがとう！」
 
-「植物を持っていってもいい？」
-「どうぞ。中のほうが温かいですから」
+ミレイユに感謝しながら、彼女は管理者なのかと尋ねる。返ってきた答えは意外なものだった。
 
-ミレイユはそう言って、ポラリスの荷台から植木鉢を下ろすのを手伝ってくれた。植物は旅人にとって最も高価な交易品の一つになる。ルイザが故郷を出るとき、母親が持たせてくれたのがこの”生命の樹”の植木鉢だった。”生命の樹”は光合成による酸素の還元率が高い植物の一つなので、旅人に限らずルイザの故郷の人にとって重宝されていた。彼女にとって旅の相棒でもある。
+「わたしは管理者ではありません」
+「じゃあ、後で管理者に会わせてもらえる？」
+「ここに住んでいるのはわたし一人ですよ」
 
-ルイザは旅の話を、以前街に来た旅人から聞いていた。
-最後にマナウスの街に旅人が来たのは十年以上前のことだ。ここ何年も、旅人は訪れていなかった。そもそも旅をする人が減ったという説と、動かすことができるポラリスや携帯用の酸素発生装置がもう残っていないという説がそこかしこで聞こえていた。酸素発生装置は高度な技術が使われていて、作れるエンジニアは限られていた。マナリスの街でも一人の老人しか作っていなかった。彼女の持っている酸素発生装置はその老人から、羊一頭とうさぎ一匹で交換したものだ。
+ルイザはまたも困惑した。そして、遠くから見たときに街というほど大規模な建物群がなかったことに納得した。しかし、だとすれば十年前に旅人から聞いた街とは何なのだろう。そして、ステーションの維持をしているのはルイザの常識では管理者なのだった。しかしミレイユは違うと言う。では彼女は何者なのだろう。
+その疑問を口にする前にミレイユが内側のドアを開けた。
 
-交易が無いと街は孤立していく。旅人は交易品とともに情報もやり取りする役目を持っていた。その旅人がもう何年も来ていないことがルイザにとっては不満であり、怖くもあった。
+「どうぞ、中を案内します」
+「あ、ありがとう……」
 
-十数年前の旅人の情報では、各地にこの街のようなステーションがあって、そこで補給ができるということだった。マナリスの街からまっすぐ南に五日ほど進むと、最初のステーションがあるということを彼女はその時知ったのだ。
-ステーションには管理人がいて、運が良ければそこで他の旅人と出会うかもしれないとも聞いた。少なくとも、旅は過酷な外の環境に適応する術さえ持っていればそこまで困難なものではなかった。
-それでも、旅に必要な物資を揃えることができる人間は限られている。
-ルイザは父がステーションの管理人だったこともあり、幼い頃から物に不自由したことはなかった。家はいつも緑と動物で溢れていた。
-植物と動物は何よりも貴重なものだ。家から一歩出れば、植物も動物も見かけることは稀だったから、ルイザは早くに自宅が裕福であることを知っていた。
+ルイザは植木鉢を抱えたまま困惑しつつ後に続いた。
 
-旅人は街と街をつないで交易をする。一つの街でありふれているものでも、他の街で売れば高値がつくことがある。
-それに情報だ。他の街がどんな生活をしているのか。氷原はどこまで迫っているのか。
-北へ行けば、まだ氷に覆われていない土地があると聞く。それも何年も前の話だ。それでも彼女が南への旅路を選んだのは、氷に覆われていない土地は治安が悪いともっぱらの噂だったからである。
+中は空っぽだった。
+金属製の廊下には空調の音だけが低く響いている。いくつかのドア。所々に天窓があり、赤く染まりつつある空が見えた。本当に、夜になる前にたどり着いてよかった。ポラリスの荷台で夜を過ごすのにも慣れてきたルイザだったが、安全な屋内で過ごす安心感は格別だ。
 
-ほとんどの人は街から出ることなく一生を終える。危険な外に出るのは旅人と都市鉱山の鉱夫、それとステーションの修理をするエンジニアくらいのものだった。
+それにしても ── ルイザの中でまた不安が膨れ上がってきた。故郷の街に比べたら小さいとは言え、この建物だって随分広い。電気を受信するための巨大なアンテナも見えた。ミレイユは一体ここで何をしているのだろう。一人で何十年も生活するためだけにこの建物を管理しているとは、とてもではないが正気とは思えなかった。
 
-携帯用の酸素発生装置はそもそも高価で、個人で持っている者は限られている。小型化したものは鉱夫たちが使っているし、ポラリスへ搭載するタイプのものは旅人用だ。一般人が手に入れることはまずない。
-そして、ステーションの外に出るのは自殺行為だった。どんな動物でも植物でも、外の酸素濃度で長時間活動できるものはいない。たちまち窒息してしまう。
+「ねえ、ミレイユ、さん？」
+「何でしょう」
+「色々聞きたいことがあるの」
+「そうでしょうとも」
 
-人間は電気を使って水を水素と酸素に分解する方法を知っていた。知恵を使って、大昔に地球が凍りついたとき、街を大きなドームで覆って酸素で満たす方法を考えだした。生き残ったのはドームの中に運良く入れた人間と、家畜たち。それから比較的寒い環境でも育つ、いくつかの植物。
+先を歩くミレイユは振り返らずにそういった。まるでルイザの言動をすべて予め予測していたかのような言い方がまたも気になったが、それでも構わず質問を続ける。
 
-ミレイユがステーションの入り口のパネルを操作する。シュッと空気が漏れる音がして、ドアが開いた。
-ステーションの外に続く反対側のドアは固く閉じられている。
+「わたし、別の旅人に街があるって聞いたんだけど、この近くに街があるか知ってる？」
+「もう何年も、わたしの知る限りそれはありません」
+「ここにはいつから住んでるの？」
+「かれこれ二十五年と三ヶ月ほど」
+「それって」「着きましたよ」
 
-「こちらへ」
-ミレイユはルイザのバッグを持って歩き出した。ルイザは植木鉢を抱えて、慌ててミレイユの後をついていく。
+先頭を歩いていたミレイユが、一つのドアの前で振り返った。ここに来るまでに通ったドアと何ら変わりない、無機質な金属製のドアがそこにあった。
+ミレイユがドアの前に立つと、ドアは勝手にスライドした。
 
-ステーションの中は空っぽだった。円形になっている廊下は金属で覆われていて、これといった装飾も無ければ植物がおいてあることもない。故郷のステーションは植物でいっぱいだったので、それを期待していたルイザは少しがっかりした。空調の音が静かに響いている。
-他にも人間がいるのかと思っていたが、休憩室のドアの前にたどりつくまで一人ともすれ違わなかった。
+「ここが休憩室です。中のものは好きに使ってください」
+「ありがとう……」
 
-「あの、ここには他に誰かいますか？」
-「いいえ、わたしひとりです」
-「いつから？」
-「ここ二十五年ほど」
-「他に旅人が来ることはありませんでしたか？」
-「そうですね…十二年と三ヶ月前にひとり。たしか名前は ── アンソニー・ベックスさん」
-「彼が最後の旅人？」
-「そうです。あなたが来るまでは」
+ルイザは困惑しつつもお礼を言った。まだ、ミレイユには聞きたいことが多くある。ここはなんのための場所なのか。十年前に故郷に立ち寄った旅人はどこから来てどこへ行ったのか。頭の中はいまだかつて無いほどいろいろな考えが浮かんでは消えていった。消える前にメモしなくちゃ、とルイザは思う。メモ帳はバッグの中に入っている。旅に出ると決意した日に、友人から餞別でもらった貴重な紙を使ったメモ帳。金色の箔押しの表紙がついた、贅沢なものだ。旅から帰ったらお返しに何かあげなくちゃ、と思っている。もし旅先で何か目新しいものが手に入れば、の話だが。
 
-ミレイユは振り返らずに歩きながら言った。
-ルイザの頭の中には無数の疑問が浮かんでは消えていった。しかし、その疑問を口にする前に、ミレイユが振り返った。
+ミレイユは休憩室の使い方をひととおり説明すると、ルイザを小さな仕切りのついたエリアに案内した。そこには簡素なベッドと小さめのテーブルが置いてあった。
 
-「こちらが休憩室です。部屋の中の物は自由に使ってください」
+「昔は何人もの旅人さんがここで出会うこともあったのですが」
 
-静かにスライドして開いたドアの向こうは思った以上に広かった。ここも換気が行き届いているのか、空調の音がかすかに聞こえる。
+ミレイユの言葉に、ルイザは思わず振り返る。
 
-広々とした空間は廊下より一層暖かかった。窓はない。どうせ氷以外に見るものもないのだが。
+「もう何年も来ていません。ですが、念の為整備しておいてよかった」
+「最後に旅人が来たのはいつだか覚えてる？」
+「十年と八ヶ月。たしか、アンソニー・ベックスさんという方でした」
 
-休憩室の中には小さな小部屋があって、ミレイユはその一つにルイザを案内した。その空間は故郷の自室を思わせるもので、十分な広さのベッドとテーブルがおいてあった。
+途端にルイザの記憶が蘇る。そうだ、あの旅人はアンソニーと名乗っていた。マナウスの南に六日ほど行ったところに街があると言っていた、あの旅人。彼は今どこにいるのだろう。故郷に帰ったのだろうか。それともどこかで ──
 
-「ありがとう。久しぶりにゆっくり休めそう」
-「後で食事をお届けします。それから補給が必要な物があればおっしゃってください。わたしは向かいの部屋にいますので」
+「わたしは向かいの部屋にいます」
 
-ミレイユはそういうと部屋を出ていった。
+ルイザが物思いにふけっていると、ミレイユは廊下を挟んで反対側のドアを指して言った。他の部屋のドアとは違って、それは白く塗られていた。
 
-シャワーを済ませて部屋に戻ると、食事がおいてあった。ミレイユは食事をすませて休憩室を出た。
-一通りステーションの中を散策する。最初の印象と違わず、他の生き物の気配は一つもなかった。無機質な廊下に空調の音が反響しているだけだ。建物は六角状になっていて、北側にエントランス、南側に休憩室がある構造になっている。彼女の故郷のにあったステーションと同じ構造だとすれば、中央にエネルギーを受信するための巨大な受光機があるはずだった。彼女はその部屋に入ったことがあった。中はケーブルが縦横無尽に這っていて、街中に電力を届けるために変圧して送電する装置があった。それを理解しようと勉強していたこともあった。
+「何かあればいつでもお声がけください」
+「わかった。ありがとう」
 
-中央の部屋への入り口は休憩室のすぐ前にあった。ステーションの廊下を一周して戻ってきたルイザはドアの前に立った。
-休憩室のドアは前に立つと自動で開くものだった。最初は面食らったものの、すぐにそういうものだと思うことにした。彼女の故郷には自動で開くドアはなかった。
-しかし中央の部屋のドアの前に立っても、ドアは反応しなかった。仕方なくノックする。
+シャワーと食事を済ませたルイザは休憩室を出た。熱いお湯を浴びている間にミレイユが準備してくれたらしい夕食が、個室のテーブルにおいてあったのだ。お礼を言おうと、白いドアをノックする。
 
-「ミレイユ、いる？」
-
-すぐさまドアは音もなくスライドした。
-「ルイザさん。お食事は口に合いましたか？」
-「はい、おいしかったです」
-「それはよかった。どうぞ、お入りください」
-「ありがとう。人に会うのは久しぶりだから話し相手が欲しくて ──」
-
-中央の部屋に入ったルイザは言葉を失った。
-
-巨大な部屋の中心に、受光機と変圧器があるのは同じだった。しかし、部屋の見た目は故郷のもとのは全く違っていた。
-まず、部屋を這い回っているケーブル類がない。人が他にいないから当然かもしれない。
+すぐさまドアが開いてミレイユが出てきた。
