メモを追加

--- a/Journey/01.md
+++ b/Journey/01.md
@@ -10,7 +10,7 @@ DAY 11
 彼女が子供の頃、街には年に一人ほど旅人が訪れていた。
 旅人は他の街からやってきて、珍しい植物や工芸品、ときには小動物なども運んで来ていた。それに加えて外の情報も。とは言っても、街の外には特に見るべきものはない。氷点下百度前後の街の外は生命の存在を許さない過酷な環境だ。そんな中を移動するのは、入念な準備と適応力が必要になる。そうして運と冒険心がある者が街を出る。旅に出る理由はいろいろだ。新たな都市鉱山を見つけて一儲けしたいとか ── もっとも、都市鉱山を見つけてその付近に新しい街を作るのは恐ろしく手間がかかる ──、氷に覆われていない大地を見たいとか、新種の植物を見つけたいとか、そんなところだ。そして、街に居場所がない者も旅に出ることがある。
 
-度に出る動気になる夢物語をひとつ。
+[旅に出る動機になる夢物語をひとつ。]
 
 しかし故郷を出て六日を過ぎても、街にあるはずの巨大なアンテナの先端すら見当たらなかった。あたりは一面氷の世界だ。微風で、どこまでも続いているように思える青空が広がっている。青空の氷の鮮やかなコントラスト。代わり映えのしない、旅に出てから見慣れた風景。
 
@@ -147,3 +147,5 @@ DAY 11
 シャワーと食事を済ませたルイザは休憩室を出た。熱いお湯を浴びている間にミレイユが準備してくれたらしい夕食が、個室のテーブルにおいてあったのだ。お礼を言おうと、白いドアをノックする。
 
 すぐさまドアが開いてミレイユが出てきた。
+
+[ミレイユから世界の全体像を聞いたところで終わる]
