--- a/Journey/01.md
+++ b/Journey/01.md
@@ -4,17 +4,19 @@ DAY 11
 
 旅人は、突然のくぼみにはまって転倒しないように慎重にポラリスを操縦している。軟化ガラスに覆われた荷台の後ろ側には、丁寧にロープで固定された植木鉢がある。故郷を出るときに餞別にもらったものの一つだ。生命の樹と呼ばれるその植物は、光合成によって放出される酸素の量が他の植物よりも多いことで重宝されていた。ポラリスの後部の履帯が氷を踏む度に、鮮やかに色づいた葉をのんきに揺らしている。
 
-無謀にも故郷を飛び出したものの、十日が過ぎても目的地が見つからずに旅人は焦っていた。そもそも、隣の街まで南に六日、とは十年以上も前に別の旅人から聞いた情報しかない。本当にそこに街があったのか。今でもあるのか。それを知るものは故郷には一人もいなかった。街の誰も、もう何年も一キロメートル以上離れたことがなかったからである。
+無謀にも故郷を飛び出したものの、十日が過ぎても目的地が見つからずに旅人は焦っていた。そもそも、隣の街まで南に六日、とは十年以上も前に別の旅人から聞いた情報でしかない。本当にそこに街があったのか。今でもあるのか。それを知るものは故郷には一人もいなかった。街の誰も、もう何年も百メートル以上離れたことがなかったからである。
 旅人はそれが不満であり、不安でもあった。街と外をつなぐ唯一のエアロックを見る度に、世界からこの街が取り残されているような気分になっていたからである。
 
 彼女が子供の頃、街には年に一人ほど旅人が訪れていた。
 旅人は他の街からやってきて、珍しい植物や工芸品、ときには小動物なども運んで来ていた。それに加えて外の情報も。とは言っても、街の外には特に見るべきものはない。氷点下百度前後の街の外は生命の存在を許さない過酷な環境だ。そんな中を移動するのは、入念な準備と適応力が必要になる。そうして運と冒険心がある者が街を出る。旅に出る理由はいろいろだ。新たな都市鉱山を見つけて一儲けしたいとか ── もっとも、都市鉱山を見つけてその付近に新しい街を作るのは恐ろしく手間がかかる ──、氷に覆われていない大地を見たいとか、新種の植物を見つけたいとか、そんなところだ。そして、街に居場所がない者も旅に出ることがある。
 
-[旅に出る動機になる夢物語をひとつ。]
+彼女は自称冒険家だった。子供の頃、街に来た旅人から聞いた夢物語 ── 空の上まで続く塔があるとか、一面緑に覆われたジャングルが赤道付近には残っているとか ── の世界を想像して過ごした。本も友だちだった。子供の頃は本もたくさんあった。ほとんどが再利用されて今は残っていないが、大地が氷河に覆われていない世界を書いた絵本があったものだ。
+そういった物語に憧れて、そして次第に資源のすり減って生活が窮屈になっていく街を何とかしたいと思って旅に出ることを決意した。
+外の世界は酸素が薄く、何より生命の存在を許さない極寒の世界が広がっている。準備は入念にした。何より彼女には環境と運があった。旅の準備はあっけないほど順調に整った。
 
-しかし故郷を出て六日を過ぎても、街にあるはずの巨大なアンテナの先端すら見当たらなかった。あたりは一面氷の世界だ。微風で、どこまでも続いているように思える青空が広がっている。青空の氷の鮮やかなコントラスト。代わり映えのしない、旅に出てから見慣れた風景。
+しかし故郷を出て六日を過ぎても、街にあるはずの巨大なアンテナの先端すら見当たらなかった。あたりは一面氷の世界だ。今日も微風で、冷たい青空が広がっている。青と白の無慈悲なコントラスト。どこまで行っても代わり映えのしない、旅に出てから見飽きた風景。
 
-太陽が旅人自身の影を前方に映し出し、進むべき方向を明確にしている。南に六日。その情報だけで街を出た。もう少し、詳しい場所を調べてから行くべきだったかもしれない。もしかしたらどこかに目印があったのかもしれない、などと旅人は後悔し始めていた。ポラリスのメインバッテリーはもう半分を切っている。今更街に戻る事はできず、予備バッテリーでは電熱スーツの充電くらいにしか使えないので次の街が見つからなければまず酸欠で死ぬことになる。
+太陽が旅人自身の影を前方に映し出し、進むべき方向を明確にしている。影を追うように南に六日。その情報だけで街を出た。もう少し、詳しい場所を調べてから行くべきだったかもしれない。かつて旅人の往来があったのなら、進むべき道もあったのかもしれない。もしかしたらどこかに目印があったのかもしれない、などと旅人は考え始めていた。ポラリスのメインバッテリーはもう半分を切っている。今更街に戻る事はできず、予備バッテリーでは電熱スーツの充電くらいにしか使えないので次の街が見つからなければまず酸欠で死ぬことになる。
 それに ── 旅に出る直前に出会った人々の顔が脳裏によぎる ──、そもそも外の世界に詳しい人など故郷には一人もいなかった。酸素発生装置を羊一頭とうさぎ一羽で譲ってくれた老人すら、外には仕事でしか出たことがないという。
 
 街で外の世界に一番くわしいのは鉱夫たちだった。彼らは毎日外に出る。街の出口から五百メートルほど離れたところに都市鉱山はあった。街からだと氷の柱のようにしか見えないが、近づけばそれが古代の建築物であることはひと目で分かる。世界が氷河に覆われる前、人はその都市に住んでいたのだという。
@@ -52,100 +54,186 @@ DAY 11
 住民があまりに普通に挨拶するので、旅人は一瞬面食らった。
 
 「あ、あの……」
-「良い天気ですね」
+「良い天気だと思わないかね」
 「ええ。そうですね……」
 
-旅人はその人を見た。年の頃は自分より少し上といったところだろうか。肩のあたりで揃えたブラウンの髪は波打っていて、エアロックの天窓から差し込む夕日に照らされてつやつやと輝いていた。飾り気のない真っ白な、風変わりな服をまとっている。
+旅人はその人を見た。年の頃は自分より少し上といったところだろうか。肩のあたりで揃えたブラウンの髪は波打っていて、エアロックの天窓から差し込む夕日に照らされてつやつやと輝いていた。飾り気のない真っ白な服をまとっている。
 
-「ミレイユと申します。旅人さんですね」
-「あっ、どうも！」
+「ミレイユだ。旅人だね？」
+「あっ、そうです！」
 
 旅人は慌ててマスクとゴーグルと帽子を外した。旅人が帽子に押し込んでいた長い黒髪が開放されて背に流れた。
 
-「どうも、ルイザです。マナウスの街から来ました」
-「そうでしょうとも」
+「ルイザです。マナウスの街から来ました」
+「そうだろうとも」
 
 ミレイユと名乗った住民はルイザが来ることを知っていたかのように言った。
 
-「お疲れでしょう。どうぞ休んでいってください」
+「補給していくだろう？案内するからついてきなさい」
 「あ、ありがとう……」
 
 ルイザは困惑していた。この街は何というのか。住民はどれほどいるのか。彼女の頭の中では疑問が浮かんでは消えていった。そして十日ぶりに人に会えて安堵した途端、急に疲労を感じた。
 
-「荷物を下ろすのを手伝いましょうか」
+「荷降ろしを手伝おうか？」
 「あ、大丈夫です。自分でやります！」
 
 ルイザは慌てて電熱スーツを脱ぎにかかった。エアロック内の温度が上がってきて暑さを感じた。ポラリスのエンジンを切る。低く響いていたモーター音が消えて静寂が訪れると、急に気まずさを感じた。
 
-「夜に間に合ってよかった」
+「それにしても、夜に間に合ってよかったね」
 ミレイユは静かに言った。夜になると外の温度は氷点下百二十度にまでなる。電熱スーツを着込んでいても厳しい寒さだ。ミレイユのいうことは最もだった。
 
 「本当に。思ったより時間がかかってびっくりしちゃった」
-「マナリスの街からは何日ほど？」
-「うーん、今日で十日目かな」「それは大変だったでしょう」「ええ、お風呂に入りたい」「休憩室に用意してあります」
+「ここに来るまでどのくらいかかったのかな」
+「今日で十日目かな」
+「長旅だね」「ええ、お風呂に入りたい」「休憩室に用意してある。使うといい」
 「ありがとう！」
 
 ミレイユに感謝しながら、彼女は管理者なのかと尋ねる。返ってきた答えは意外なものだった。
 
-「わたしは管理者ではありません」
+「わたしは管理者ではないよ」
 「じゃあ、後で管理者に会わせてもらえる？」
-「ここに住んでいるのはわたし一人ですよ」
+「ここに住んでいるのはわたし一人だよ、旅人のお嬢さん」
 
 ルイザはまたも困惑した。そして、遠くから見たときに街というほど大規模な建物群がなかったことに納得した。しかし、だとすれば十年前に旅人から聞いた街とは何なのだろう。そして、ステーションの維持をしているのはルイザの常識では管理者なのだった。しかしミレイユは違うと言う。では彼女は何者なのだろう。
 その疑問を口にする前にミレイユが内側のドアを開けた。
 
-「どうぞ、中を案内します」
+「どうぞ、入って」
 「あ、ありがとう……」
 
-ルイザは植木鉢を抱えたまま困惑しつつ後に続いた。
+ルイザは植木鉢を抱えたまま後に続いた。
 
-中は空っぽだった。
-金属製の廊下には空調の音だけが低く響いている。いくつかのドア。所々に天窓があり、赤く染まりつつある空が見えた。本当に、夜になる前にたどり着いてよかった。ポラリスの荷台で夜を過ごすのにも慣れてきたルイザだったが、安全な屋内で過ごす安心感は格別だ。
+ミレイユの言う通り、中は無人だった。
+金属製の廊下には空調の音だけが低く響いている。いくつかの代わり映えしないドアの前を通過する。所々に天窓があり、赤く染まりつつある空が見えた。本当に、夜になる前にたどり着いてよかった。ポラリスの荷台で夜を過ごすのにも慣れてきたルイザだったが、安全な屋内で過ごす安心感は格別だ。
 
 それにしても ── ルイザの中でまた不安が膨れ上がってきた。故郷の街に比べたら小さいとは言え、この建物だって随分広い。電気を受信するための巨大なアンテナも見えた。ミレイユは一体ここで何をしているのだろう。一人で何十年も生活するためだけにこの建物を管理しているとは、とてもではないが正気とは思えなかった。
 
 「ねえ、ミレイユ、さん？」
-「何でしょう」
+「何かな」
 「色々聞きたいことがあるの」
-「そうでしょうとも」
+「そうだろうとも」
 
 先を歩くミレイユは振り返らずにそういった。まるでルイザの言動をすべて予め予測していたかのような言い方がまたも気になったが、それでも構わず質問を続ける。
 
 「わたし、別の旅人に街があるって聞いたんだけど、この近くに街があるか知ってる？」
-「もう何年も、わたしの知る限りそれはありません」
-「ここにはいつから住んでるの？」
+「ここから一番近いのはマナウスの街だよ。それ以外は知らないね」
+「そうですか……。ここにはいつから？」
 「かれこれ二十五年と三ヶ月ほど」
-「それって」「着きましたよ」
+「それって」「着いたよ」
 
 先頭を歩いていたミレイユが、一つのドアの前で振り返った。ここに来るまでに通ったドアと何ら変わりない、無機質な金属製のドアがそこにあった。
 ミレイユがドアの前に立つと、ドアは勝手にスライドした。
 
-「ここが休憩室です。中のものは好きに使ってください」
+「たまに来る旅人用に整備している休憩室だよ。中の物は好きにつかっていいからね」
 「ありがとう……」
 
 ルイザは困惑しつつもお礼を言った。まだ、ミレイユには聞きたいことが多くある。ここはなんのための場所なのか。十年前に故郷に立ち寄った旅人はどこから来てどこへ行ったのか。頭の中はいまだかつて無いほどいろいろな考えが浮かんでは消えていった。消える前にメモしなくちゃ、とルイザは思う。メモ帳はバッグの中に入っている。旅に出ると決意した日に、友人から餞別でもらった貴重な紙を使ったメモ帳。金色の箔押しの表紙がついた、贅沢なものだ。旅から帰ったらお返しに何かあげなくちゃ、と思っている。もし旅先で何か目新しいものが手に入れば、の話だが。
 
 ミレイユは休憩室の使い方をひととおり説明すると、ルイザを小さな仕切りのついたエリアに案内した。そこには簡素なベッドと小さめのテーブルが置いてあった。
 
-「昔は何人もの旅人さんがここで出会うこともあったのですが」
+「旅人が多い時期にはここで交流も盛んだったのだが」
 
 ミレイユの言葉に、ルイザは思わず振り返る。
 
-「もう何年も来ていません。ですが、念の為整備しておいてよかった」
+「もう何年も来てないからね。人類は旅に出るのが嫌になったのかと思ってたところだよ。でも、念の為整備しておいて正解だったね」
 「最後に旅人が来たのはいつだか覚えてる？」
-「十年と八ヶ月。たしか、アンソニー・ベックスさんという方でした」
+「十年と八ヶ月。たしか、アンソニー・ベックスという人間だった」
 
 途端にルイザの記憶が蘇る。そうだ、あの旅人はアンソニーと名乗っていた。マナウスの南に六日ほど行ったところに街があると言っていた、あの旅人。彼は今どこにいるのだろう。故郷に帰ったのだろうか。それともどこかで ──
 
-「わたしは向かいの部屋にいます」
+「わたしは向かいの部屋にいるからね」
 
 ルイザが物思いにふけっていると、ミレイユは廊下を挟んで反対側のドアを指して言った。他の部屋のドアとは違って、それは白く塗られていた。
 
-「何かあればいつでもお声がけください」
+「何かあればいつでも声をかけてくれて構わないよ。話し相手が必要なときとかね」
 「わかった。ありがとう」
 
-シャワーと食事を済ませたルイザは休憩室を出た。熱いお湯を浴びている間にミレイユが準備してくれたらしい夕食が、個室のテーブルにおいてあったのだ。お礼を言おうと、白いドアをノックする。
+シャワーと食事を済ませたルイザは休憩室を出た。熱いお湯を浴びている間にミレイユが準備してくれたらしい夕食が、個室のテーブルにおいてあった。お礼を言おうと白いドアをノックする。
 
 すぐさまドアが開いてミレイユが出てきた。
 
-[ミレイユから世界の全体像を聞いたところで終わる]
+「夕食は口に合ったかな？」
+「ええ、変わった見た目だけど美味しかった」
+「保存が効くから持っていくといい」
+「ありがとう。食料はここで作ってるの？」
+「いいや、我々は動植物を育てていない」
+
+ミレイユは話しながら室内にルイザを招き入れた。外観から察するに、ここが中央の受光機がある部屋だと思ったが、意外にも狭かった。そして薄暗い。暗い部屋に、光る小さな窓がいくつもあった。
+小さな窓の前にテーブルと椅子がおいてあった。ここがミレイユの部屋なのだろうとルイザは思った。彼女は部屋の隅からもう一つ椅子を取り出して、ルイザの目の前においた。黙ってそれに座る。ミレイユに聞きたいことはたくさんあった。ここ数日、街が見つからないかもしれないという不安で打ち消されていたルイザの本来の好奇心が再び芽生えつつあった。
+
+「食料はフロリダで作っている。君の街からだと北東の方向だね」「それって本当？」
+「もちろんだとも……ああ、君たちは知らないんだったな」
+
+ミレイユは一瞬考え込むような仕草をしたが、ルイザに向き直った。
+
+「どこから説明したものかな。我々と君たちの知っていることに関しては、大きな差があるのだよ」
+「どのくらい？」
+「そうだな。ものすごく、だ」
+
+ミレイユは机の前にある窓に向かって手を一振りした。すると、いくつかあった小さい窓が消えて、大きな一つの窓が現れた。真っ白な球体が黒い背景に浮かんでいる映像だ。
+
+「我々は世界を観察している」
+「なんのために？」
+「それはね……そうだね。地球の環境がどのように遷移するのかを調べているのだよ」
+「環境？」
+「そう。今は長い氷河の時代だ」
+
+ミレイユの言葉にあわせて窓に映る景色が変わるのを、ルイザは魔法のようだと思って眺めていた。黒い背景に白い球体が浮かんでいる。「地球だ」とミレイユは言う。
+
+「原因はね、まあ、色々考えてみたのだよ。極端な火山活動の低下にくわえ、われわれは軌道エレベーターで温暖化を解決しようと試みた。その結果冷却しすぎたのかもしれないとかね」
+「それは……大変なのね」
+
+ルイザにはミレイユの言葉の意味がほとんどわからなかった。雪崩のようにあふれる情報を前に、何とか相槌をうつ。
+
+ミレイユは満足そうにうなずいた。
+
+「地球に残ることを決断した人たちのために、我々ができることはなんだろうとね。色々話し合った結果、こうして拠点を作って人々の交流を助けるに留めることにしたのだよ。なぜかって？ほとんどの人間は地球を捨てて他の、月やらシェオルやらに移住したがね、どうしても故郷を離れたがらない人は少なくなかったからだよ。そういう人たちに無理に移住を進めるわけにもいかない」
+「それは、なんとなくわかる気がする」
+
+ルイザはミレイユの言葉の雪崩の間にほんの僅か、自分が処理できる情報があることを認識するとすかさず言った。彼女に無知だと思われたくないという、ほんの少しのプライドが顔を出したのだ。だが、すでにそんな風に取り繕うのは無駄だとも理解していた。ミレイユはルイザたちが知らないことを多く知っている。そしてなぜか、自分が来ることも知っていたように思う。
+
+「そういえば、あなたはわたしが来ることを知っていたんでしょう？」
+「ああ、街を出たところを見ていたからね」
+「どうして道案内をしてくれなかったの？そうしたら旅がもっとかんたんだったと思うのだけど」
+「ああ、我々にできることは観測することで、直接手出しはなるべくしないように言われているのだよ」
+「だれに？」
+「管理者に、だ」
+「さっき、管理者はいないって……」
+「ああ。ここにはいない。[アレ]は遠くにいるからね。ここにいるのはわたし一人だ。だけど、この ──」ミレイユは机の上の窓を指差す。アレはただの窓ではなく、遠くの景色を映し出すものなのだとルイザは理解し始めていた。
+
+「部屋を通じて、管理者とは必要に応じて話をしているのだよ。さて、他に質問は？」
+「そうね、色々聞きたいことがあるのだけど、何から聞けばいいのかしら。」
+「わたしも君に聞きたいことがある」
+ミレイユの言葉に、ルイザは思わず彼女の顔を見た。魔法の窓の明かりに照らされて、青白く輝いている。
+
+「君たちはどうやって生活しているのかね？それにどこまで理解しているのか、世界のことをね。そして、なんのために君は旅に出たのか。わたしは知りたい。最後のはただの個人的な興味だがね」
+
+ルイザは考え込んだ。旅に出たのは運が重なったからだった。そして、その前に彼女は外の世界への好奇心と街の未来への不安を抱えていた。だが、ここへ来てなんだかそれがちっぽけな、取るに足らないことのように思えたのだ。ミレイユはもっと広い世界を見ている。彼女の視界に比べたら、自分の視野はなんて狭いのだろうと思い知っていた。
+
+「そうね。わたしは ──」
+「言いたくなかったら遠慮せずにそう言うといい」
+
+ルイザが言いよどんでいるとすかさずミレイユはそう言った。彼女なりの気遣いなのだろうと思うと、ちっぽけな自尊心がどうでもよく思えてきた。
+
+「わたしはただ外の世界がどうなってるのか知りたくて旅に出た。でも、氷以外に見るものなんてないんだからがっかりちゃった」
+「それはそうだろうね」
+「ねえ、わたし、他の街を見たいの。他に行ける街があるか知ってるんでしょ？」
+「ああ、だが……」
+
+今度はミレイユが言いよどんだ。どこまで説明したものか迷っているようだった。そうして逡巡したのち彼女が言った言葉は、ルイザの不安をより大きなものに変えてしまった。
+
+「ほとんどの街はみんな”移住”を完了させたんだよ。残っている人は多くない。マナウスの街は珍しいんだよ」
+「マナウス以外にも街はあるんでしょう？それとも、みんな月とかに行っちゃったの？」
+「まあ、ほとんどはシェオルへの移住だ。シェオルの話を聞いたことは？」「全然ないわ」
+「それは困ったね。長い話になりそうだ」
+
+ミレイユは肩をすくめた。それから何かに気づいたようにルイザの方を振り返った。
+
+「あいにく、この部屋にはコーヒーもお茶もなくてね。どうだい？エアロックに出て、星でも見ながら話さないか？熱いお茶を持っていこう」
+「どうしてエアロックに？」「あそこは星がよく見える。わたしは星を見るのが好きでね」
+「わたし、星をじっくりみたことなんてない」
+「そうだろうとも」
+
+ミレイユに促されて部屋から出る。二人揃って休憩室に行く。ミレイユが携帯用ポットにお茶を入れるのをルイザは黙って眺めていた。
+
+「さて、星を見ながら我々の過去と未来について語ろうじゃないか」
+「それって素敵」
