--- a/Orpheus/settings/01_全体プロット.md
+++ b/Orpheus/settings/01_全体プロット.md
@@ -1,63 +1,40 @@
-1. ベガe2に移住した移民たち。ある程度の文明を再構築して、20世紀くらいの生活水準を作って生活している。一人の青年が、珍しい石を仕事場から拝借してきた。普段取れるのはオレンジ色だが、その石は薄い緑色をしていた。彼はそれを装身具の工房へ持っていき、ネックレスへの加工を依頼する。想い人の誕生日まであとひと月。この石をプレゼントするつもりだった。その夜、街の地下でごく微かな振動が起こったが、採掘場の近くで頻繁に地震がある街の人達はさほど気にかけてはいなかった。ベガには動物がいなかったために、移民たちは自分たちが捕食される生き物であることを忘れていたのだった。
+作り直しのためのメモ
 
-2. ベガe2の衛星軌道にあるジンウー6の船員がある日、地上の街との連絡が取れなくなっていることに気がついた。街の上空をジンウー6が通過したとき、そこにあるはずの街がなくなっていた。船員が数名、調査のために地上に下りたが、戻ってくるものはいなかった。
+- コンテストに応募する
+- 10 万文字くらい目安
 
-3. 50年後、ISSAのスペクターが三人、ジンウー6へやってくる。船員が誰もいない宇宙船は、自動操縦で高度を維持してはいたものの、船内の生命維持装置が半分以上故障している事が判明する。船内を調べていくうちに、ベガe2で異変が起こったことが判明する。その後なんどか地上へ部隊を派遣したが、
+### 条件
 
-4. 3人がそこで見たものは、人形の物を襲う動く巨大な植物。その中で、かつて生活していた文明の痕跡を見つけ、彼らの残した記録をたどりながら、全滅に至った原因を調査していく。宇宙船は人手不足のためにメンテナンスが滞り、最終的に廃墟化、物資もなくなり、生命維持装置の故障でコールドスリープに入っていた船員を含めて全員が死体で発見される。
-
-5. 三人は地上に原因があると見て調査を開始。移民たちはほとんどが原因を見つける前にやられていたため、情報がほぼない状態での調査となった。かつて人がすんでいた痕跡をたどっていくうちに、動く巨大な植物が街を襲った事が判明する。街の廃墟で、冒頭の青年がネックレスを想い人に届け、死に際まで一緒にいたことが判明するという伏線を回収しておく。ちなみにこの石は植物を活性化させる粒子を微量に含有していた。という設定も付け加えておく。
-
-6. 上記の異変は、人間がベガe2の環境破壊をしたことが原因…というミスリードを誘って、実際は採掘しなくても200年後くらいには地下の粒子は地上に湧き出ていた事が判明する。【人間程度のちからでは惑星の環境を変えることはできない、という主張】
-
-7. 地下の粒子を調査していくうちに、偶然、アオハが粒子に通電することで意思疎通ができることを発見する。粒子は惑星の植物と化学反応を起こし突然変異、自我と素早く動くための体を手に入れたという事が分かる。彼らとの対話に成功したのち、アテナはベガe2に知性体が生息していることを認め、移住計画は封印することを約束するのだった。
-
-8. 移民の全ての記録を回収し、彼らは宇宙空間でドールを分解して地球へ帰還する。
-
+- SF
+- アクション要素がある
+- ファンタジー要素がある
+- 精霊信仰の世界と科学の話
+- 精霊がいる（マジでいる）世界にアンドロイドが調査に訪れる
+- 住民は科学を魔法の一種だと思っている
+- TODO: 精霊の定義と設定をする
+- TODO: キャラクターの名前を新しく考える
 
 ---
 
-## 三幕構成に関するメモ
-# プロローグ
-　中盤に探索する街と鉱山についての日常を描写しておくとともに、都市壊滅のフラグを立てておく。
-ｖ
+プロット
 
-# 第一幕（物語の1/4の長さ）
+# 第一幕（物語の 1/4 の長さ）
+
 - 状況を設定する
-    - ここで設定した状況以上のものを以降で登場させてはいけない
-    - タウカ・プロジェクト。アテナなどのオービターに実質支配されている地球を諦め、ベーシック独自の社会と文明を築いていこうという理念のもとに立ち上げられたプロジェクト。移住可能な惑星を調査し、移民団を送りその地で理想の社会を構築することが目的。10の居住可能な惑星に目星をつけて、それぞれにジンウーと名付けた宇宙船を送り出した。中国が主動のプロジェクトだが、中華人だけなのはジンウー1だけで、それ以外は多国籍である。
-    - ベガe2の生態系。動物のようにすばやく動く植物のような生物。アオハがドールの修復のためにナノロボットを使用したとき、植物にも偶然通電し、彼らの体内にある金属分子が独自のネットワークを構築しているのではないかという仮説が立つ。
-    - 宇宙船の構成。ジンウー5は宇宙空間で建築された10機の恒星間移動を可能にする宇宙船のうちの一つである。ベガ星系の第四惑星ベガe2を新たな居住地とするために向かっていた。
+  - ここで設定した状況以上のものを以降で登場させてはいけない
 - セントラルクエスチョンの提示
-    - 主人公たちの目的を明確にする
-    - ジンウー5がSOSを出した理由を見つける
+  - 主人公たちの目的を明確にする
 - 読者を誘引するような展開
-    - 未知の惑星で起こった異変。
-    - 惑星での移民たちの生活。変異した植物によるウイルス感染のような症状におびえながら、原因を突き止めようとした生存者たちの痕跡をたどる。
 
-# 第二幕（物語の1/2の長さ）
+# 第二幕（物語の 1/2 の長さ）
+
 - セントラルクエスチョン解決のための行動を描写する
-    - 惑星に降り立ち、移民団の痕跡をたどって記録を回収する。数十年たち、ほとんどが劣化または植物により侵食されていたが、かろうじて原型をとどめている物を少しずつ調べていく。
 - 中間にミッドポイントを設定する
-    - ミッドポイントでは問題解決のための行動の分岐点を設定する
-    - 採掘場に到達。感染性物質の発生源と思われる場所で、空気の成分を調査し、ウイルスに酷似した物質の濃度が地下に行くほど高くなることが判明する。
-    - 生存者の記録から、それに気づいており、採掘場の地下を爆破して崩壊させる計画があったことが明らかになる。
 - 読者に期待を抱かせる
-    - 人間が採掘したことがキッカケで惑星の生態系を乱したのか？環境破壊に対するアンチテーゼか？と思わせておいて、実は遅かれ早かれ惑星の生態系は激変することが調査によって判明する。人間の行動程度で惑星の生態系が変わるほど影響与えられねーよというメッセージである。
-    - 採掘場の地下８層で、爆薬と死体を発見する。彼が生存者の中で行動していた「ケヴィン」という人物であることが判明する。８層は酸素濃度が薄く、酸欠で力尽きたものと思われる。
 - ミッドポイント以降
-    - 調査班は物体Δと名付けた惑星固有の粒子があることを解明する。Δは結合するとニューロンのような形状になり、シナプスの役割を果たすαを照射することで活性化する。この状態をΩと名付ける。Ωには固有の意識のようなものがあることがわかる。
 
-# 第三幕（物語の1/4の長さ）
+# 第三幕（物語の 1/4 の長さ）
+
 - セントラルクエスチョンの回収、解決
-    - 資源採掘のために地下を掘り進んでいった結果、地下深くに存在するΔと大気中に存在するαが結合し、Ωが発生したと考えられる。オメガは独自の意識を持っているので、他者（移民）と交流しようとしてβとγを生成。しかしβとγは人体にとって毒だったために移民団は全滅することとなった。
 - それまで描写してきた伏線などを回収すること
-    - アイーシャの持っていたネックレスの石。アイーシャは早くに第一感染したが、その後長期間に渡って生存していたため、わずかにΩの存在を認識していたと思われる。
-    - アイーシャが全編に渡って記録をつけている。
 - 読者に満足感を与える
-    - すべての謎を解明させる
-    - Ωとのコンタクト。生まれたばかりの知性。他者との交流を望む。むしろ他者の存在がΩをより活性化させたと考えられる。しかしΩはベーシックにはコンタクト出来ず、また生まれたばかりである。教師を求めるΩに、調査隊は受光器を残す。これに接続することで交流できる。
-    - Ωを解明することで、スペクターは物質に依存せずに存在することが可能になるかもしれない。そうなればサーバやドールが不要になるかもしれない。その可能性を研究するため、ベガe2とのネットワークを構築する。
-    - ネットワークを構築しようとしたところで、いつの間にかAP-SPSの受光器が採掘場の真上に存在することが判明した。これはAP-SPSが彼らの通信を検知しており、介入する意思を示したと判断したディーリー。彼の指示とΩの意思により、AP-SPSのオービターがΩの教師訳を務めると宣言。このとき一瞬AP-SPS,通称アマテラスと交信したアオハは、ジンウー6からSOSを発信したのはアマテラスであることを理解する。
-    - すべてを報告書にまとめて、彼らはドールを分解、地球へ帰還する。
-    - のちに、Ωを分析した研究チームにより、超光速通信が実現へ一歩近づいたことをなんとなく示唆しておく。
